--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-STOREFRONT_FIREBASE_API_KEY=AIzaSyC_9T7PDZHgAfnUcRGfROShlEIe4mozkRg
-STOREFRONT_FIREBASE_AUTH_DOMAIN=sneakerheadz-336fe.firebaseapp.com
-STOREFRONT_FIREBASE_DATABASE_URL=https://sneakerheadz-336fe-default-rtdb.firebaseio.com
-STOREFRONT_FIREBASE_PROJECT_ID=sneakerheadz-336fe
-STOREFRONT_FIREBASE_STORAGE_BUCKET=sneakerheadz-336fe.appspot.com
-STOREFRONT_FIREBASE_MESSAGING_SENDER_ID=935310122501
-STOREFRONT_FIREBASE_APP_ID=1:935310122501:web:faf35f35da0ccec81d066c
+REACT_APP_API_KEY=AIzaSyC_9T7PDZHgAfnUcRGfROShlEIe4mozkRg
+REACT_APP_AUTH_DOMAIN=sneakerheadz-336fe.firebaseapp.com
+REACT_APP_DATABASE_URL=https://sneakerheadz-336fe-default-rtdb.firebaseio.com
+REACT_APP_PROJECT_ID=sneakerheadz-336fe
+REACT_APP_STORAGE_BUCKET=sneakerheadz-336fe.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=935310122501
+REACT_APP_APP_ID=1:935310122501:web:faf35f35da0ccec81d066c
